--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,6 +1,7 @@
-kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
 metadata:
+  creationTimestamp: null
   name: az-keyvault-secrets-operator
 rules:
 - apiGroups:
@@ -15,7 +16,7 @@ rules:
   - configmaps
   - secrets
   verbs:
-  - "*"
+  - '*'
 - apiGroups:
   - apps
   resources:
@@ -24,22 +25,22 @@ rules:
   - replicasets
   - statefulsets
   verbs:
-  - "*"
+  - '*'
 - apiGroups:
   - monitoring.coreos.com
   resources:
   - servicemonitors
   verbs:
-  - "get"
-  - "create"
+  - get
+  - create
 - apiGroups:
   - apps
-  resources:
-  - deployments/finalizers
   resourceNames:
   - az-keyvault-secrets-operator
+  resources:
+  - deployments/finalizers
   verbs:
-  - "update"
+  - update
 - apiGroups:
   - ""
   resources:
@@ -53,3 +54,15 @@ rules:
   - deployments
   verbs:
   - get
+- apiGroups:
+  - app.cwoolum.com
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- apiGroups:
+  - keyvault.turnoutt.com
+  resources:
+  - '*'
+  verbs:
+  - '*'
