--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -72,5 +72,11 @@ ADD https://github.com/operator-framework/operator-sdk/releases/download/v0.12.0
 
 RUN chmod +x /usr/bin/operator-sdk
 
-RUN apt-get update && \
-    apt-get install -y docker
+RUN apt-get update \
+    #
+    # Install Docker CE CLI
+    && apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common lsb-release \
+    && curl -fsSL https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]')/gpg | apt-key add - 2>/dev/null \
+    && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/$(lsb_release -is | tr '[:upper:]' '[:lower:]') $(lsb_release -cs) stable" \
+    && apt-get update \
+    && apt-get install -y docker-ce-cli \
