--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: az-keyvault-secrets-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: turnoutt/azure-keyvault-operator:latest
           command:
           - az-keyvault-secrets-operator
           imagePullPolicy: Always
